--- a/src/App.css
+++ b/src/App.css
@@ -8,9 +8,10 @@
 }
  #mainNav {
   height: 70px;
-  background-color: rgba(90, 90, 90, 0.486);
+  background: linear-gradient(to right, rgba(0,0,0,1) 0%,rgba(45, 45, 45, 0.473) 100%);
   color: #949494;
   border-radius: 0 0 10px 10px;
+  animation:scale-in-ver-top .4s ease-in-out alternate both
 }
 
 #mainNav .navbar-toggler {
@@ -44,6 +45,12 @@
   display: none;
 }
 
+.projects-section .project-text hr {
+  border-color: rgb(113, 60, 236);
+  border-width: .25rem;
+  width: 30%;
+}
+
 #mainNav .navbar-nav .nav-item:active, #mainNav .navbar-nav .nav-item:focus {
   outline: none;
   background-color: transparent;
@@ -73,6 +80,7 @@
     border-bottom: none;
     background: linear-gradient(to right, rgba(0,0,0,1) 0%,rgba(45, 45, 45, 0.473) 100%);
     transition: background-color 0.3s ease-in-out;
+    animation:scale-in-ver-top .4s ease-in-out alternate both
   }
 
   #mainNav .navbar-brand {
@@ -406,3 +414,4 @@ a:focus, a:hover {
 footer {
   padding: 5rem 0;
 }
+@keyframes scale-in-ver-top{0%{transform:scaleY(0);transform-origin:100% 0;opacity:1}100%{transform:scaleY(1);transform-origin:100% 0;opacity:1}}
