--- a/src/Components/about.module.scss
+++ b/src/Components/about.module.scss
@@ -5,21 +5,31 @@
    display:flex;
    justify-content: space-between;
    width: 100%;
-   .avatarcontainer{
-       img{
-        width:20%;
-           border-radius: 5px;
-       }
-       display:flex;
-       justify-content: space-evenly;
-     align-items:center ;
-     flex-direction: column;
-       color:rgb(160, 156, 156);
-       font-style: normal;
-      
-       width:40%;
-   }
    .text{
        width: 60%;
-   }
+    }
 }
+                   .avatarcontainer{
+                       img{
+                        width:25%;
+                           border-radius: 5px;
+                        }
+                               @media(max-width: 400px){
+                                   img{
+                                   width: 80%!important;
+                                   float: left;
+
+                                   }
+                               }
+                       display:flex;
+                       justify-content: space-evenly;
+                       @media(max-width:400px){
+                           justify-content: center;
+                       }
+                     align-items:center ;
+                     flex-direction: column;
+                       color:rgb(160, 156, 156);
+                       font-style: normal;
+                      
+                       width:40%;
+                   }
